💄 fixes css overflow in vertical nav

--- a/app/javascript/src/Navigation/styles/VerticalNav.scss
+++ b/app/javascript/src/Navigation/styles/VerticalNav.scss
@@ -1,9 +1,6 @@
-.pf-c-nav__section-title {
+.pf-c-nav > .pf-c-nav__section > .pf-c-nav__section-title {
   border-bottom: 1px solid #3c3f42;
   margin-bottom: 8px;
-  font-weight: 400;
-}
-
-.pf-c-page__sidebar .pf-c-nav__section-title {
   margin-top: 0;
+  font-weight: 400;
 }
